Archive2/5a/782a3ee7129677/output
main.cpp:10:5: error: C++ requires a type specifier for all declarations
    fixed_string() : size_(0) { }
    ^~~~~~~~~~~~
main.cpp:35:28: error: unknown type name 'fixed_string'
    friend bool operator==(fixed_string const& a, fixed_string const& b) {
                           ^
main.cpp:35:41: error: expected ')'
    friend bool operator==(fixed_string const& a, fixed_string const& b) {
                                        ^
main.cpp:35:27: note: to match this '('
    friend bool operator==(fixed_string const& a, fixed_string const& b) {
                          ^
main.cpp:39:28: error: unknown type name 'fixed_string'
    friend bool operator!=(fixed_string const& a, fixed_string const& b) {
                           ^
main.cpp:39:41: error: expected ')'
    friend bool operator!=(fixed_string const& a, fixed_string const& b) {
                                        ^
main.cpp:39:27: note: to match this '('
    friend bool operator!=(fixed_string const& a, fixed_string const& b) {
                          ^
main.cpp:43:28: error: unknown type name 'fixed_string'
    friend bool operator>=(fixed_string const& a, fixed_string const& b) {
                           ^
main.cpp:43:41: error: expected ')'
    friend bool operator>=(fixed_string const& a, fixed_string const& b) {
                                        ^
main.cpp:43:27: note: to match this '('
    friend bool operator>=(fixed_string const& a, fixed_string const& b) {
                          ^
main.cpp:47:28: error: unknown type name 'fixed_string'
    friend bool operator<=(fixed_string const& a, fixed_string const& b) {
                           ^
main.cpp:47:41: error: expected ')'
    friend bool operator<=(fixed_string const& a, fixed_string const& b) {
                                        ^
main.cpp:47:27: note: to match this '('
    friend bool operator<=(fixed_string const& a, fixed_string const& b) {
                          ^
main.cpp:51:27: error: unknown type name 'fixed_string'
    friend bool operator>(fixed_string const& a, fixed_string const& b) {
                          ^
main.cpp:51:40: error: expected ')'
    friend bool operator>(fixed_string const& a, fixed_string const& b) {
                                       ^
main.cpp:51:26: note: to match this '('
    friend bool operator>(fixed_string const& a, fixed_string const& b) {
                         ^
main.cpp:55:27: error: unknown type name 'fixed_string'
    friend bool operator<(fixed_string const& a, fixed_string const& b) {
                          ^
main.cpp:55:40: error: expected ')'
    friend bool operator<(fixed_string const& a, fixed_string const& b) {
                                       ^
main.cpp:55:26: note: to match this '('
    friend bool operator<(fixed_string const& a, fixed_string const& b) {
                         ^
main.cpp:10:20: error: only constructors take base initializers
    fixed_string() : size_(0) { }
                   ^
main.cpp:22:37: error: use of undeclared identifier '__function__'
            throw std::out_of_range(__function__);
                                    ^
main.cpp:28:27: error: unknown type name 'fixed_string'
        return const_cast<fixed_string&>(*this).at(index);
                          ^
main.cpp:36:16: error: use of undeclared identifier 'a'
        return a.data_ == b.data_;
               ^
main.cpp:36:27: error: use of undeclared identifier 'b'
        return a.data_ == b.data_;
                          ^
main.cpp:40:16: error: use of undeclared identifier 'a'
        return a.data_ != b.data_;
               ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
